    - min_pursue_time's base game default is 10 seconds.

  Changes:
    - Units from dropships / custom spawn should now added to its parent unit group.
    - *** Removed Level Requirement Multiplier from setting. ***  May affect existing game. Please adjust [Level Up] Evolution Point Multiplier.

  Gui:
    - Race name column now print proper label, instead of race codename.



---------------------------------------------------------------------------------------------------
Version: 1.17.4
Date: 2023-07-15

  Changes:
    - Changed command center teleport box width from 32 to 48 tiles.
    - Adjusted custom attack groups' attack_area radius.
    - [Experimental] Custom attack groups should clear nearby attack-able entities before moving on to the next base.
    - [Experimental] Custom attack groups should pick a closer attack position to reduce transit time.
    - Deprecated Level Requirement Multiplier in Start up setting. Please use [Level Up] Evolution Point Multiplier in map setting instead.  They serve same purpose.
    - ** Use value < 1 to slow down or value > 1 to speed up the level speed with Evolution Point Multiplier.
    - ** Level Requirement Multiplier setting will remove in next release.

  Bugfixes:
    - FFA health multiplier will ignore entity with HP over 10 million to prevent crash.

---------------------------------------------------------------------------------------------------
Version: 1.17.3
Date: 2023-05-16

  Changes:
    - The following are Cold/Explosive/Toxic Biters changes
    - Behemoth creatures spawn evolution changed from 0.9 to 0.85.
    - Leviathan creatures spawn evolution changed from 0.95+ to 0.9.
    - Mother creatures spawn evolution changed from 0.975 to 0.925.
    - Consolidated big creatures spawn chance to be 55% at 1.0 evolution.
    - Consolidated behemoth creatures spawn chance to be 40% at 1.0 evolution.
    - Consolidated leviathan creatures spawn chance to be 4% at 1.0 evolution.